<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/kk"
    android:id="@+id/detailFragment"
    tools:context=".Fragment3">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_return"
        android:layout_width="154dp"
        android:layout_height="26dp"
        android:background="@drawable/button"
        android:text="@string/lkdjfdflkfrw"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035"
        tools:ignore="MissingConstraints" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="329dp"
        android:layout_height="228dp"
        android:background="@drawable/recycle"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.135"
        tools:ignore="MissingConstraints" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="269dp"
        android:layout_height="191dp"
        android:background="@drawable/recycle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.877"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/editBut"
        android:layout_width="130dp"
        android:layout_height="24dp"
        android:background="@drawable/button"
        android:text="@string/red"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.958"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/yet2"
        android:layout_width="302dp"
        android:layout_height="37dp"
        android:background="@drawable/button"
        android:gravity="top|start"
        android:hint="@string/kjdhfdff"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingLeft="10dp"
        android:paddingRight="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        android:textSize="@dimen/thisis18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.612"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/task2"
        android:layout_width="298dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:background="@drawable/button"
        android:hint="@string/jhdfdf"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:paddingRight="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        android:textSize="@dimen/thisis18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.541"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dkjhfdf"
        android:textSize="@dimen/thisis24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.47" />

</androidx.constraintlayout.widget.ConstraintLayout>